--- a/portfolio.html
+++ b/portfolio.html
@@ -47,15 +47,51 @@
         </li>
       </ul>
       <ul>
-        <li><img src="" alt="" /></li>
-        <li><img src="" alt="" /></li>
-        <li><img src="" alt="" /></li>
-        <li><img src="" alt="" /></li>
-        <li><img src="" alt="" /></li>
-        <li><img src="" alt="" /></li>
-        <li><img src="" alt="" /></li>
-        <li><img src="" alt="" /></li>
-        <li><img src="" alt="" /></li>
+        <li>
+          <img src="./images/portfolio/img-1.jpg" alt="" />
+          <h3>Banking App Interface Concept</h3>
+          <p>App</p>
+        </li>
+        <li>
+          <img src="./images/portfolio/img-2.jpg" alt="" />
+          <h3>Cashless Payment</h3>
+          <p>Marketing</p>
+        </li>
+        <li>
+          <img src="./images/portfolio/img-3.jpg" alt="" />
+          <h3>Meditation App</h3>
+          <p>App</p>
+        </li>
+        <li>
+          <img src="./images/portfolio/img-4.jpg" alt="" />
+          <h3>Taxi Service</h3>
+          <p>Marketing</p>
+        </li>
+        <li>
+          <img src="./images/portfolio/img-5.jpg" alt="" />
+          <h3>Screen Illustrations</h3>
+          <p>Design</p>
+        </li>
+        <li>
+          <img src="./images/portfolio/img-6.jpg" alt="" />
+          <h3>Online Courses</h3>
+          <p>Marketing</p>
+        </li>
+        <li>
+          <img src="./images/portfolio/img-7.jpg" alt="" />
+          <h3>Instagram Stories Concept</h3>
+          <p>Design</p>
+        </li>
+        <li>
+          <img src="./images/portfolio/img-8.jpg" alt="" />
+          <h3>Organic Food</h3>
+          <p>Web Site</p>
+        </li>
+        <li>
+          <img src="./images/portfolio/img-9.jpg" alt="" />
+          <h3>Fresh Coffee</h3>
+          <p>Web Site</p>
+        </li>
       </ul>
     </main>
     <!-- Footer section -->
