--- a/index.html
+++ b/index.html
@@ -5,20 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <!-- Fonts -->
+    <link rel="stylesheet" href="
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    ">
+    <!-- Normalize -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+    />
+    <!-- Custom styles -->
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- Header section -->
-    <header>
-      <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
+    <header class="header">
+      <nav class="header-nav">
+        <a class="logo" href="./index.html"
+          >Web<span class="studio-dark">Studio</span></a
+        >
+        <ul class="header-nav-link">
           <li><a href="./index.html">Studio</a></li>
           <li><a href="#portf">Portfolio</a></li>
           <li><a href="#team">Contacts</a></li>
         </ul>
       </nav>
       <address>
-        <ul>
+        <ul class="header-link">
           <li>
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
@@ -147,8 +165,10 @@
       </section>
     </main>
     <!-- Footer section -->
-    <footer>
-      <a href="./index.html">WebStudio</a>
+    <footer class="footer">
+      <a class="logo" href="./index.html"
+        >Web<span class="studio-light">Studio</span></a
+      >
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
