--- a/index.html
+++ b/index.html
@@ -6,14 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <!-- Fonts -->
-    <link rel="stylesheet" href="
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    ">
     <!-- Normalize -->
     <link
       rel="stylesheet"
@@ -29,18 +27,18 @@
         <a class="logo" href="./index.html"
           >Web<span class="studio-dark">Studio</span></a
         >
-        <ul class="header-nav-link">
-          <li><a href="./index.html">Studio</a></li>
-          <li><a href="#portf">Portfolio</a></li>
-          <li><a href="#team">Contacts</a></li>
+        <ul>
+          <li class="link"><a href="./index.html">Studio</a></li>
+          <li class="link"><a href="./portfolio.html">Portfolio</a></li>
+          <li class="link"><a href="#team">Contacts</a></li>
         </ul>
       </nav>
       <address>
-        <ul class="header-link">
-          <li>
+        <ul class="header-address">
+          <li class="link">
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
-          <li>
+          <li class="link">
             <a href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
@@ -49,37 +47,37 @@
     <!-- Main block -->
     <main>
       <!-- Hero section -->
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="hero">
+        <h1 class="hero-title">Effective Solutions for Your Business</h1>
+        <button class="hero-button" type="button">Order Service</button>
       </section>
       <!-- Benefits -->
-      <section>
+      <section class="benefits">
         <h2 hidden>Benefits of WebStudio</h2>
         <ul>
           <li>
-            <h3>Strategy</h3>
+            <h3 class="title">Strategy</h3>
             <p>
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
+            <h3 class="title">Punctuality</h3>
             <p>
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
+            <h3 class="title">Diligence</h3>
             <p>
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
+            <h3 class="title">Technologies</h3>
             <p>
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
@@ -87,9 +85,9 @@
           </li>
         </ul>
       </section>
-      <!-- What are we doing -->
-      <section id="portf">
-        <h2>What are we doing</h2>
+      <!-- Product -->
+      <section class="product">
+        <h2 class="title">What are we doing</h2>
         <ul>
           <li>
             <img
@@ -118,48 +116,48 @@
         </ul>
       </section>
       <!-- Our team -->
-      <section id="team">
-        <h2>Our Team</h2>
+      <section class="team-section" id="team">
+        <h2 class="title">Our Team</h2>
         <ul>
-          <li>
+          <li class="item">
             <img
               src="./images/teams/mark.jpg"
               alt="a man with dark hair and a beard"
               width="264"
               height="260"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="name">Mark Guerrero</h3>
+            <p class="text">Product Designer</p>
           </li>
-          <li>
+          <li class="item">
             <img
               src="./images/teams/tom.jpg"
               alt="a man with blond hair and a nice smile"
               width="264"
               height="260"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="name">Tom Ford</h3>
+            <p class="text">Frontend Developer</p>
           </li>
-          <li>
+          <li class="item">
             <img
               src="./images/teams/camila.jpg"
               alt="pretty girl with dark hair"
               width="264"
               height="260"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="name">Camila Garcia</h3>
+            <p class="text">Marketing</p>
           </li>
-          <li>
+          <li class="item">
             <img
               src="./images/teams/daniel.jpg"
               alt="a man with dark curly hair and stubble"
               width="264"
               height="260"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="name">Daniel Wilson</h3>
+            <p class="text">UI Designer</p>
           </li>
         </ul>
       </section>
@@ -169,7 +167,7 @@
       <a class="logo" href="./index.html"
         >Web<span class="studio-light">Studio</span></a
       >
-      <p>
+      <p class="text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
