--- a/portfolio.html
+++ b/portfolio.html
@@ -4,24 +4,41 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <!-- Fonts -->
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Normalize -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+    />
+    <!-- Custom styles -->
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- Header section -->
-    <header>
-      <nav>
-        <a href="./index.html">WebStudio</a>
+    <header class="header">
+      <nav class="header-nav">
+        <a class="logo" href="./index.html"
+          >Web<span class="studio-dark">Studio</span></a
+        >
         <ul>
-          <li><a href="./index.html">Studio</a></li>
-          <li><a href="#portf">Portfolio</a></li>
-          <li><a href="#team">Contacts</a></li>
+          <li class="link"><a href="./index.html">Studio</a></li>
+          <li class="link"><a href="./portfolio.html">Portfolio</a></li>
+          <li class="link"><a href="#team">Contacts</a></li>
         </ul>
       </nav>
       <address>
-        <ul>
-          <li>
+        <ul class="header-address">
+          <li class="link">
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
-          <li>
+          <li class="link">
             <a href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
@@ -29,75 +46,125 @@
     </header>
     <!-- Portfolio section -->
     <main>
-      <ul>
-        <li>
-          <button type="button">All</button>
-        </li>
-        <li>
-          <button type="button">Web Site</button>
-        </li>
-        <li>
-          <button type="button">App</button>
-        </li>
-        <li>
-          <button type="button">Design</button>
-        </li>
-        <li>
-          <button type="button">Marketing</button>
-        </li>
-      </ul>
-      <ul>
-        <li>
-          <img src="./images/portfolio/img-1.jpg" alt="" />
-          <h3>Banking App Interface Concept</h3>
-          <p>App</p>
-        </li>
-        <li>
-          <img src="./images/portfolio/img-2.jpg" alt="" />
-          <h3>Cashless Payment</h3>
-          <p>Marketing</p>
-        </li>
-        <li>
-          <img src="./images/portfolio/img-3.jpg" alt="" />
-          <h3>Meditation App</h3>
-          <p>App</p>
-        </li>
-        <li>
-          <img src="./images/portfolio/img-4.jpg" alt="" />
-          <h3>Taxi Service</h3>
-          <p>Marketing</p>
-        </li>
-        <li>
-          <img src="./images/portfolio/img-5.jpg" alt="" />
-          <h3>Screen Illustrations</h3>
-          <p>Design</p>
-        </li>
-        <li>
-          <img src="./images/portfolio/img-6.jpg" alt="" />
-          <h3>Online Courses</h3>
-          <p>Marketing</p>
-        </li>
-        <li>
-          <img src="./images/portfolio/img-7.jpg" alt="" />
-          <h3>Instagram Stories Concept</h3>
-          <p>Design</p>
-        </li>
-        <li>
-          <img src="./images/portfolio/img-8.jpg" alt="" />
-          <h3>Organic Food</h3>
-          <p>Web Site</p>
-        </li>
-        <li>
-          <img src="./images/portfolio/img-9.jpg" alt="" />
-          <h3>Fresh Coffee</h3>
-          <p>Web Site</p>
-        </li>
-      </ul>
+      <section>
+        <h1 hidden>Portfolio</h1>
+        <ul class="button-list">
+          <li>
+            <button class="button all" type="button">All</button>
+          </li>
+          <li>
+            <button class="button" type="button">Web Site</button>
+          </li>
+          <li>
+            <button class="button" type="button">App</button>
+          </li>
+          <li>
+            <button class="button" type="button">Design</button>
+          </li>
+          <li>
+            <button class="button" type="button">Marketing</button>
+          </li>
+        </ul>
+        <ul>
+          <li>
+            <img
+              src="./images/portfolio/img-1.jpg"
+              alt="pages from the banking app"
+              width="360"
+              height="300"
+            />
+            <h2 class="desc">Banking App Interface Concept</h2>
+            <p>App</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio/img-2.jpg"
+              alt="phone with QR code"
+              width="360"
+              height="300"
+            />
+            <h2 class="desc">Cashless Payment</h2>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio/img-3.jpg"
+              alt="laptope and phone with the same image"
+              width="360"
+              height="300"
+            />
+            <h2 class="desc">Meditation App</h2>
+            <p>App</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio/img-4.jpg"
+              alt="car steering wheel"
+              width="360"
+              height="300"
+            />
+            <h2 class="desc">Taxi Service</h2>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio/img-5.jpg"
+              alt="themes for phone screen"
+              width="360"
+              height="300"
+            />
+            <h2 class="desc">Screen Illustrations</h2>
+            <p>Design</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio/img-6.jpg"
+              alt="girls with headphones and phone in hands"
+              width="360"
+              height="300"
+            />
+            <h2 class="desc">Online Courses</h2>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio/img-7.jpg"
+              alt="design of pages for advertising"
+              width="360"
+              height="300"
+            />
+            <h2 class="desc">Instagram Stories Concept</h2>
+            <p>Design</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio/img-8.jpg"
+              alt="a woman is holding a knitted bag with vegetables"
+              width="360"
+              height="300"
+            />
+            <h2 class="desc">Organic Food</h2>
+            <p>Web Site</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio/img-9.jpg"
+              alt="a man makes a cappuccino"
+              width="360"
+              height="300"
+            />
+            <h2 class="desc">Fresh Coffee</h2>
+            <p>Web Site</p>
+          </li>
+        </ul>
+      </section>
     </main>
     <!-- Footer section -->
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <footer class="footer">
+      <a class="logo" href="./index.html"
+        >Web<span class="studio-light">Studio</span></a
+      >
+      <p class="text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
