--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta subtitle="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -27,19 +27,27 @@
         <a class="logo" href="./index.html"
           >Web<span class="studio-dark">Studio</span></a
         >
-        <ul>
-          <li class="link"><a href="./index.html">Studio</a></li>
-          <li class="link"><a href="./portfolio.html">Portfolio</a></li>
-          <li class="link"><a href="#team">Contacts</a></li>
+        <ul class="list">
+          <li>
+            <a class="link" href="./index.html">Studio</a>
+          </li>
+          <li>
+            <a class="link" href="./portfolio.html">Portfolio</a>
+          </li>
+          <li>
+            <a class="link" href="#team">Contacts</a>
+          </li>
         </ul>
       </nav>
       <address>
-        <ul class="header-address">
-          <li class="link">
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <ul class="header-address list">
+          <li>
+            <a class="link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
           </li>
-          <li class="link">
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+          <li>
+            <a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
@@ -49,36 +57,36 @@
       <!-- Hero section -->
       <section class="hero">
         <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button class="hero-button" type="button">Order Service</button>
+        <button class="button" type="button">Order Service</button>
       </section>
       <!-- Benefits -->
       <section class="benefits">
         <h2 hidden>Benefits of WebStudio</h2>
-        <ul>
+        <ul class="list">
           <li>
-            <h3 class="title">Strategy</h3>
-            <p>
+            <h3 class="subtitle">Strategy</h3>
+            <p class="text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3 class="title">Punctuality</h3>
-            <p>
+            <h3 class="subtitle">Punctuality</h3>
+            <p class="text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3 class="title">Diligence</h3>
-            <p>
+            <h3 class="subtitle">Diligence</h3>
+            <p class="text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3 class="title">Technologies</h3>
-            <p>
+            <h3 class="subtitle">Technologies</h3>
+            <p class="text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -88,7 +96,7 @@
       <!-- Product -->
       <section class="product">
         <h2 class="title">What are we doing</h2>
-        <ul>
+        <ul class="list">
           <li>
             <img
               src="./images/photo-1.jpg"
@@ -118,7 +126,7 @@
       <!-- Our team -->
       <section class="team-section" id="team">
         <h2 class="title">Our Team</h2>
-        <ul>
+        <ul class="list">
           <li class="item">
             <img
               src="./images/teams/mark.jpg"
@@ -126,7 +134,7 @@
               width="264"
               height="260"
             />
-            <h3 class="name">Mark Guerrero</h3>
+            <h3 class="subtitle">Mark Guerrero</h3>
             <p class="text">Product Designer</p>
           </li>
           <li class="item">
@@ -136,7 +144,7 @@
               width="264"
               height="260"
             />
-            <h3 class="name">Tom Ford</h3>
+            <h3 class="subtitle">Tom Ford</h3>
             <p class="text">Frontend Developer</p>
           </li>
           <li class="item">
@@ -146,7 +154,7 @@
               width="264"
               height="260"
             />
-            <h3 class="name">Camila Garcia</h3>
+            <h3 class="subtitle">Camila Garcia</h3>
             <p class="text">Marketing</p>
           </li>
           <li class="item">
@@ -156,7 +164,7 @@
               width="264"
               height="260"
             />
-            <h3 class="name">Daniel Wilson</h3>
+            <h3 class="subtitle">Daniel Wilson</h3>
             <p class="text">UI Designer</p>
           </li>
         </ul>
@@ -164,7 +172,7 @@
     </main>
     <!-- Footer section -->
     <footer class="footer">
-      <a class="logo" href="./index.html"
+      <a class="logo link" href="./index.html"
         >Web<span class="studio-light">Studio</span></a
       >
       <p class="text">
