--- a/portfolio.html
+++ b/portfolio.html
@@ -27,28 +27,30 @@
         <a class="logo" href="./index.html"
           >Web<span class="studio-dark">Studio</span></a
         >
-        <ul>
-          <li class="link"><a href="./index.html">Studio</a></li>
-          <li class="link"><a href="./portfolio.html">Portfolio</a></li>
-          <li class="link"><a href="#team">Contacts</a></li>
+        <ul class="list">
+          <li><a class="link" href="./index.html">Studio</a></li>
+          <li><a class="link" href="./portfolio.html">Portfolio</a></li>
+          <li><a class="link" href="#team">Contacts</a></li>
         </ul>
       </nav>
       <address>
-        <ul class="header-address">
-          <li class="link">
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <ul class="header-address list">
+          <li>
+            <a class="link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
           </li>
-          <li class="link">
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+          <li>
+            <a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
     </header>
     <!-- Portfolio section -->
     <main>
-      <section>
+      <section class="portfolio">
         <h1 hidden>Portfolio</h1>
-        <ul class="button-list">
+        <ul class="btn list">
           <li>
             <button class="button all" type="button">All</button>
           </li>
@@ -65,7 +67,7 @@
             <button class="button" type="button">Marketing</button>
           </li>
         </ul>
-        <ul>
+        <ul class="list">
           <li>
             <img
               src="./images/portfolio/img-1.jpg"
@@ -73,8 +75,8 @@
               width="360"
               height="300"
             />
-            <h2 class="desc">Banking App Interface Concept</h2>
-            <p>App</p>
+            <h2 class="subtitle">Banking App Interface Concept</h2>
+            <p class="text">App</p>
           </li>
           <li>
             <img
@@ -83,8 +85,8 @@
               width="360"
               height="300"
             />
-            <h2 class="desc">Cashless Payment</h2>
-            <p>Marketing</p>
+            <h2 class="subtitle">Cashless Payment</h2>
+            <p class="text">Marketing</p>
           </li>
           <li>
             <img
@@ -93,8 +95,8 @@
               width="360"
               height="300"
             />
-            <h2 class="desc">Meditation App</h2>
-            <p>App</p>
+            <h2 class="subtitle">Meditation App</h2>
+            <p class="text">App</p>
           </li>
           <li>
             <img
@@ -103,8 +105,8 @@
               width="360"
               height="300"
             />
-            <h2 class="desc">Taxi Service</h2>
-            <p>Marketing</p>
+            <h2 class="subtitle">Taxi Service</h2>
+            <p class="text">Marketing</p>
           </li>
           <li>
             <img
@@ -113,8 +115,8 @@
               width="360"
               height="300"
             />
-            <h2 class="desc">Screen Illustrations</h2>
-            <p>Design</p>
+            <h2 class="subtitle">Screen Illustrations</h2>
+            <p class="text">Design</p>
           </li>
           <li>
             <img
@@ -123,8 +125,8 @@
               width="360"
               height="300"
             />
-            <h2 class="desc">Online Courses</h2>
-            <p>Marketing</p>
+            <h2 class="subtitle">Online Courses</h2>
+            <p class="text">Marketing</p>
           </li>
           <li>
             <img
@@ -133,8 +135,8 @@
               width="360"
               height="300"
             />
-            <h2 class="desc">Instagram Stories Concept</h2>
-            <p>Design</p>
+            <h2 class="subtitle">Instagram Stories Concept</h2>
+            <p class="text">Design</p>
           </li>
           <li>
             <img
@@ -143,8 +145,8 @@
               width="360"
               height="300"
             />
-            <h2 class="desc">Organic Food</h2>
-            <p>Web Site</p>
+            <h2 class="subtitle">Organic Food</h2>
+            <p class="text">Web Site</p>
           </li>
           <li>
             <img
@@ -153,15 +155,15 @@
               width="360"
               height="300"
             />
-            <h2 class="desc">Fresh Coffee</h2>
-            <p>Web Site</p>
+            <h2 class="subtitle">Fresh Coffee</h2>
+            <p class="text">Web Site</p>
           </li>
         </ul>
       </section>
     </main>
     <!-- Footer section -->
     <footer class="footer">
-      <a class="logo" href="./index.html"
+      <a class="logo link" href="./index.html"
         >Web<span class="studio-light">Studio</span></a
       >
       <p class="text">
