--- a/portfolio.html
+++ b/portfolio.html
@@ -24,17 +24,17 @@
     <!-- Header section -->
     <header class="header">
       <nav class="header-nav">
-        <a class="logo" href="./index.html"
+        <a class="logo link" href="./index.html"
           >Web<span class="studio-dark">Studio</span></a
         >
         <ul class="list">
           <li><a class="link" href="./index.html">Studio</a></li>
           <li><a class="link" href="./portfolio.html">Portfolio</a></li>
-          <li><a class="link" href="#team">Contacts</a></li>
+          <li><a class="link" href="">Contacts</a></li>
         </ul>
       </nav>
-      <address>
-        <ul class="header-address list">
+      <address class="header-address">
+        <ul class="list">
           <li>
             <a class="link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
