--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- Header section -->
     <header class="header">
       <nav class="header-nav">
-        <a class="logo" href="./index.html"
+        <a class="logo link" href="./index.html"
           >Web<span class="studio-dark">Studio</span></a
         >
         <ul class="list">
@@ -35,12 +35,12 @@
             <a class="link" href="./portfolio.html">Portfolio</a>
           </li>
           <li>
-            <a class="link" href="#team">Contacts</a>
+            <a class="link" href="">Contacts</a>
           </li>
         </ul>
       </nav>
-      <address>
-        <ul class="header-address list">
+      <address class="header-address">
+        <ul class="list">
           <li>
             <a class="link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
@@ -124,7 +124,7 @@
         </ul>
       </section>
       <!-- Our team -->
-      <section class="team-section" id="team">
+      <section class="team-section">
         <h2 class="title">Our Team</h2>
         <ul class="list">
           <li class="item">
