--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <!-- Fonts -->
-
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -69,92 +68,101 @@
         </ul>
         <ul class="list">
           <li>
-            <img
-              src="./images/portfolio/img-1.jpg"
-              alt="pages from the banking app"
-              width="360"
-              height="300"
-            />
+            <a class="link" href=""
+              ><img
+                src="./images/portfolio/img-1.jpg"
+                alt="pages from the banking app"
+                width="360"
+                height="300"
+            /></a>
             <h2 class="subtitle">Banking App Interface Concept</h2>
             <p class="text">App</p>
           </li>
           <li>
-            <img
-              src="./images/portfolio/img-2.jpg"
-              alt="phone with QR code"
-              width="360"
-              height="300"
-            />
+            <a class="link" href=""
+              ><img
+                src="./images/portfolio/img-2.jpg"
+                alt="phone with QR code"
+                width="360"
+                height="300"
+            /></a>
             <h2 class="subtitle">Cashless Payment</h2>
             <p class="text">Marketing</p>
           </li>
           <li>
-            <img
-              src="./images/portfolio/img-3.jpg"
-              alt="laptope and phone with the same image"
-              width="360"
-              height="300"
-            />
+            <a class="link" href=""
+              ><img
+                src="./images/portfolio/img-3.jpg"
+                alt="laptope and phone with the same image"
+                width="360"
+                height="300"
+            /></a>
             <h2 class="subtitle">Meditation App</h2>
             <p class="text">App</p>
           </li>
           <li>
-            <img
-              src="./images/portfolio/img-4.jpg"
-              alt="car steering wheel"
-              width="360"
-              height="300"
-            />
+            <a class="link" href=""
+              ><img
+                src="./images/portfolio/img-4.jpg"
+                alt="car steering wheel"
+                width="360"
+                height="300"
+            /></a>
             <h2 class="subtitle">Taxi Service</h2>
             <p class="text">Marketing</p>
           </li>
           <li>
-            <img
-              src="./images/portfolio/img-5.jpg"
-              alt="themes for phone screen"
-              width="360"
-              height="300"
-            />
+            <a class="link" href=""
+              ><img
+                src="./images/portfolio/img-5.jpg"
+                alt="themes for phone screen"
+                width="360"
+                height="300"
+            /></a>
             <h2 class="subtitle">Screen Illustrations</h2>
             <p class="text">Design</p>
           </li>
           <li>
-            <img
-              src="./images/portfolio/img-6.jpg"
-              alt="girls with headphones and phone in hands"
-              width="360"
-              height="300"
-            />
+            <a class="link" href=""
+              ><img
+                src="./images/portfolio/img-6.jpg"
+                alt="girls with headphones and phone in hands"
+                width="360"
+                height="300"
+            /></a>
             <h2 class="subtitle">Online Courses</h2>
             <p class="text">Marketing</p>
           </li>
           <li>
-            <img
-              src="./images/portfolio/img-7.jpg"
-              alt="design of pages for advertising"
-              width="360"
-              height="300"
-            />
+            <a class="link" href=""
+              ><img
+                src="./images/portfolio/img-7.jpg"
+                alt="design of pages for advertising"
+                width="360"
+                height="300"
+            /></a>
             <h2 class="subtitle">Instagram Stories Concept</h2>
             <p class="text">Design</p>
           </li>
           <li>
-            <img
-              src="./images/portfolio/img-8.jpg"
-              alt="a woman is holding a knitted bag with vegetables"
-              width="360"
-              height="300"
-            />
+            <a class="link" href=""
+              ><img
+                src="./images/portfolio/img-8.jpg"
+                alt="a woman is holding a knitted bag with vegetables"
+                width="360"
+                height="300"
+            /></a>
             <h2 class="subtitle">Organic Food</h2>
             <p class="text">Web Site</p>
           </li>
           <li>
-            <img
-              src="./images/portfolio/img-9.jpg"
-              alt="a man makes a cappuccino"
-              width="360"
-              height="300"
-            />
+            <a class="link" href=""
+              ><img
+                src="./images/portfolio/img-9.jpg"
+                alt="a man makes a cappuccino"
+                width="360"
+                height="300"
+            /></a>
             <h2 class="subtitle">Fresh Coffee</h2>
             <p class="text">Web Site</p>
           </li>
