--- a/portfolio.html
+++ b/portfolio.html
@@ -51,7 +51,7 @@
         <h1 hidden>Portfolio</h1>
         <ul class="btn list">
           <li>
-            <button class="button all" type="button">All</button>
+            <button class="button" type="button">All</button>
           </li>
           <li>
             <button class="button" type="button">Web Site</button>
@@ -74,9 +74,10 @@
                 alt="pages from the banking app"
                 width="360"
                 height="300"
-            /></a>
-            <h2 class="subtitle">Banking App Interface Concept</h2>
-            <p class="text">App</p>
+              />
+              <h2 class="subtitle">Banking App Interface Concept</h2>
+              <p class="text">App</p>
+            </a>
           </li>
           <li>
             <a class="link" href=""
@@ -85,9 +86,10 @@
                 alt="phone with QR code"
                 width="360"
                 height="300"
-            /></a>
-            <h2 class="subtitle">Cashless Payment</h2>
-            <p class="text">Marketing</p>
+              />
+              <h2 class="subtitle">Cashless Payment</h2>
+              <p class="text">Marketing</p>
+            </a>
           </li>
           <li>
             <a class="link" href=""
@@ -96,9 +98,10 @@
                 alt="laptope and phone with the same image"
                 width="360"
                 height="300"
-            /></a>
-            <h2 class="subtitle">Meditation App</h2>
-            <p class="text">App</p>
+              />
+              <h2 class="subtitle">Meditation App</h2>
+              <p class="text">App</p>
+            </a>
           </li>
           <li>
             <a class="link" href=""
@@ -107,9 +110,10 @@
                 alt="car steering wheel"
                 width="360"
                 height="300"
-            /></a>
-            <h2 class="subtitle">Taxi Service</h2>
-            <p class="text">Marketing</p>
+              />
+              <h2 class="subtitle">Taxi Service</h2>
+              <p class="text">Marketing</p>
+            </a>
           </li>
           <li>
             <a class="link" href=""
@@ -118,9 +122,10 @@
                 alt="themes for phone screen"
                 width="360"
                 height="300"
-            /></a>
-            <h2 class="subtitle">Screen Illustrations</h2>
-            <p class="text">Design</p>
+              />
+              <h2 class="subtitle">Screen Illustrations</h2>
+              <p class="text">Design</p>
+            </a>
           </li>
           <li>
             <a class="link" href=""
@@ -129,9 +134,10 @@
                 alt="girls with headphones and phone in hands"
                 width="360"
                 height="300"
-            /></a>
-            <h2 class="subtitle">Online Courses</h2>
-            <p class="text">Marketing</p>
+              />
+              <h2 class="subtitle">Online Courses</h2>
+              <p class="text">Marketing</p>
+            </a>
           </li>
           <li>
             <a class="link" href=""
@@ -140,9 +146,10 @@
                 alt="design of pages for advertising"
                 width="360"
                 height="300"
-            /></a>
-            <h2 class="subtitle">Instagram Stories Concept</h2>
-            <p class="text">Design</p>
+              />
+              <h2 class="subtitle">Instagram Stories Concept</h2>
+              <p class="text">Design</p>
+            </a>
           </li>
           <li>
             <a class="link" href=""
@@ -151,9 +158,10 @@
                 alt="a woman is holding a knitted bag with vegetables"
                 width="360"
                 height="300"
-            /></a>
-            <h2 class="subtitle">Organic Food</h2>
-            <p class="text">Web Site</p>
+              />
+              <h2 class="subtitle">Organic Food</h2>
+              <p class="text">Web Site</p>
+            </a>
           </li>
           <li>
             <a class="link" href=""
@@ -162,9 +170,10 @@
                 alt="a man makes a cappuccino"
                 width="360"
                 height="300"
-            /></a>
-            <h2 class="subtitle">Fresh Coffee</h2>
-            <p class="text">Web Site</p>
+              />
+              <h2 class="subtitle">Fresh Coffee</h2>
+              <p class="text">Web Site</p>
+            </a>
           </li>
         </ul>
       </section>
